--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ persim==0.1.2
 ripser==0.5.3
 scikit-tda==0.0.3
 scipy==1.4.1
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.1
+jupyterlab==1.2.6
+jupyterlab-server==1.0.6
+qtconsole==4.6.0
