--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+        channels: conda-forge, defaults
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -55,6 +56,7 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           activate-environment: test
+          channels: conda-forge, defaults
       - name: Set up conda
         shell: bash -l {0}
         run: |    
@@ -79,6 +81,7 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           activate-environment: test
+          channels: conda-forge, defaults
       - name: Set up conda
         shell: bash -l {0}
         run: |    
