--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+          channels: conda-forge, defaults
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -53,6 +54,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.arch }}
+          channels: conda-forge, defaults
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
