--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,6 @@ name: tests
 on:
   push:
   pull_request:
-  schedule:
-    - cron: '0 0 * * *'
 
 jobs:
   test-linux-macos:
@@ -73,6 +71,7 @@ jobs:
           pip install pytest pytest-cov
       - name: Tests
         run: |
+          export NUMBA_DISABLE_JIT=1
           pytest --cov dreimac
       - name: Upload coverage results
         run: |
