--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,14 +8,11 @@ permissions:
 jobs:
   docs:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.9"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
