--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,12 +21,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-          channels: conda-forge, defaults
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine Cython numpy pytest ripser
-          python setup.py install
+          pip install .
+          pip install pytest
       - name: Run tests
         run: pytest .
       - name: Build and publish
@@ -53,12 +52,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.arch }}
-          channels: conda-forge, defaults
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine Cython numpy pytest ripser
-          python setup.py install
+          pip install .
+          pip install pytest
       - name: Run tests
         run: pytest .
       - name: Build and publish
@@ -68,4 +66,3 @@ jobs:
         run: |
           python setup.py bdist_wheel
           twine upload --skip-existing dist/*
-
