--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install pytest
+          pip install pytest setuptools wheel twine
       - name: Run tests
         run: pytest .
       - name: Build and publish
@@ -56,7 +56,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install pytest
+          pip install pytest setuptools wheel twine
       - name: Run tests
         run: pytest .
       - name: Build and publish
