--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib==3.6.2
-numba==0.56.4
-numpy==1.23.5
-persim==0.3.1
-ripser==0.6.4
-scipy==1.10.0
+matplotlib>=3.6
+numba>=0.56
+numpy>=1.23
+persim>=0.3
+ripser>=0.6
+scipy>=1.10
