--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install pytest nbmake
+          : # pip install pytest nbmake
+          pip install pytest
       - name: Run test 
         run: |
           : # we were also testing the jupyter notebooks with the command below
@@ -53,7 +54,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
-          pip install pytest nbmake
+          : # pip install pytest nbmake
+          pip install pytest
       - name: Run test 
         shell: bash -l {0}
         run: |
