--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ".[tests]"
+          pip install ".[testing]"
           : # pip install pytest nbmake
       - name: Run test
         run: |
@@ -78,7 +78,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ".[tests]"
+          pip install ".[testing]"
       - name: Tests
         run: |
           export NUMBA_DISABLE_JIT=1
