--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
-          pip install ".[tests]"
+          pip install ".[testing]"
           : # pip install pytest nbmake
       - name: Run test
         shell: bash -l {0}
